# mosquitto_client_with_aws_iot

./: CMakeLists.txt  Makefile  README.md  debug.mak  gcc_Debug.h  gcc_Release.h  mosquitto_client_with_aws_iot-Debug.vgdbsettings  mosquitto_client_with_aws_iot-Release.vgdbsettings  mosquitto_client_with_aws_iot.sln  mosquitto_client_with_aws_iot.vcxproj  mosquitto_client_with_aws_iot.vcxproj.filters  release.mak
src/: mqttwrapper.cpp  mqttwrapper.h
